Working OSIS, semi-working portal

--- a/apps/portalexample/cfg/portal.cfg
+++ b/apps/portalexample/cfg/portal.cfg
@@ -7,7 +7,7 @@ filesroot = $vardir/portal/files
 dbtype = redis
 
 actors = *
-webserverport = $(portal.port)
+webserverport = 82
 
 #leave 0 if disabled (this is like secret which gives access to all)
 secret=
