--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,9 @@ FROM phusion/baseimage
 CMD /sbin/my_init
 
 RUN rm /etc/service/sshd/down
+
 RUN apt-get update
+RUN apt-get install -y python2.7
 
 RUN curl https://raw.githubusercontent.com/Jumpscale/jumpscale_core7/master/install/install.sh | bash
 RUN ays install -n singlenode_grid
