--- a/docker/fig.yml
+++ b/docker/fig.yml
@@ -1,7 +1,7 @@
 js:
-    image: codescalers/jumpscale:7
+    image: jumpscale/ubuntu:15.04
     command: /sbin/my_init
     volumes:
-        - /home/azmy/.ssh:/root/.ssh
-        - /home/azmy/work/jumpscale_core7:/opt/code/github/jumpscale/jumpscale_core7
-        - /home/azmy/work/ays_jumpscale7:/opt/code/github/jumpscale/ays_jumpscale7
+        - ~/.ssh:/root/.ssh
+        - ../:/opt/code/github/jumpscale/jumpscale_core7
+        - ../../ays_jumpscale7:/opt/code/github/jumpscale/ays_jumpscale7
